2005-09-21  Christian Persch  <chpe@cvs.gnome.org>

	* lib/ephy-gui.c: (ephy_gui_check_location_writable):
	* lib/ephy-gui.h:

	New function to check the filename/directory for writability,
	derived from the now removed ephy_gui_confirm_overwrite_file.
	
	* src/bookmarks/ephy-bookmarks-editor.c:
	* embed/mozilla/FilePicker.cpp:
	* embed/mozilla/ContentHandler.cpp:
	* embed/mozilla/EphyHeaderSniffer.cpp:

	Use the filechooser's stock confirm-overwrite checking, but
	we still need our own writability check.

2005-09-19  Christian Persch  <chpe@cvs.gnome.org>

	* embed/ephy-embed.h:
	* embed/mozilla/mozilla-embed.cpp:

	Add EPHY_EMBED_STATE_RESTORING and conversion from
	GTK_MOZ_EMBED_FLAG_RESTORING.

2005-09-19  Christian Persch  <chpe@cvs.gnome.org>

	* data/mime-types-permissions.xml:

	Add another mime alias.

2005-09-19  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-window.c: (_ephy_window_set_context_event),
	(_ephy_window_unset_context_event), (embed_popup_deactivate_cb),
	(show_embed_popup), (ephy_window_dispose):
	* src/ephy-window.h:

	Make the methods to unset/release the context event semi-public.

2005-09-16  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-action.c:
	(bookmark_activate_with_flags), (open_in_tab_activate_cb),
	(open_in_window_activate_cb), (activate_cb):
	* src/bookmarks/ephy-bookmarks.c: (impl_resolve_address):
	Repair the previous b0rkage, see previous log

2005-09-15  Raphael Slinckx  <rslinckx@cvs.gnome.org>

	* src/bookmarks/ephy-bookmarks.c: (impl_resolve_address):
	If the search term is empty for a smart bookmark use the normal
	URL instead of the smart url with the %s replaced by ""

2005-09-15  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/GtkNSSDialog.cpp:

	Don't focus the checkbox initially. Fixes bug #163371.

2005-09-15  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_construct):

	Make Close the default button.
